--- a/404.html
+++ b/404.html
@@ -1,1 +1,1 @@
-Sorry this page does not exist =(
+Sorry this page does not exist. What's more, it is pitch black in here; you are likely to be eaten by a grue.
