--- a/404.html
+++ b/404.html
@@ -1,1 +1,10 @@
-##Sorry this page does not exist. What's more, it is pitch black in here; you are likely to be eaten by a grue.
+<!DOCTYPE html>
+<html>
+
+<body>
+<h1>Sorry this page does not exist. </h1>
+
+<p>What's more, it is pitch black in here; you are likely to be eaten by a grue.
+</p>
+</body>
+</html>
