--- a/404.html
+++ b/404.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 
-<body>
+<body bgcolor="black">
 <h1>Sorry this page does not exist. </h1>
 
-<p>What's more, it is pitch black in here; you are likely to be eaten by a grue.
+<p><font color="white">What's more, it is pitch black in here; you are likely to be eaten by a grue.</font>
 </p>
 </body>
 </html>
