--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
 
 <body bgcolor="black">
-<h1><font color="white">Sorry this page does not exist. </font></h1>
+<P><font size="8" color="white">Sorry this page does not exist. </font></p>
 
 <p><font color="white">What's more, it is pitch black in here; you are likely to be eaten by a grue.</font>
 </p>
