--- a/categories.html
+++ b/categories.html
@@ -10,7 +10,8 @@ group: navigation
   {% assign categories_list = site.categories %}
   {% include JB/categories_list %}
 </ul>
-
+<p>&nbsp;</p>
+<hr style="width:450px">
 
 {% for category in site.categories %} 
   <h2 id="{{ category[0] }}-ref">{{ category[0] | join: "/" }}</h2>
