--- a/tags.html
+++ b/tags.html
@@ -10,7 +10,8 @@ group: navigation
   {% assign tags_list = site.tags %}  
   {% include JB/tags_list %}
 </ul>
-
+<p>&nbsp;</p>
+<hr style="width:450px">
 
 {% for tag in site.tags %} 
   <h2 id="{{ tag[0] }}-ref">{{ tag[0] }}</h2>
