--- a/pages.html
+++ b/pages.html
@@ -7,6 +7,9 @@ group: navigation
 {% include JB/setup %}
 
 <h2>All Pages</h2>
+<p>&nbsp;</p>
+<hr style="width:450px">
+
 <ul>
 {% assign pages_list = site.pages %}
 {% include JB/pages_list %}
