--- a/tags.html
+++ b/tags.html
@@ -11,9 +11,10 @@ group: navigation
   {% include JB/tags_list %}
 </ul>
 <p>&nbsp;</p>
-<hr style="width:450px">
 
 {% for tag in site.tags %} 
+  <p>&nbsp;</p>
+<hr style="width:150px">
   <h2 id="{{ tag[0] }}-ref">{{ tag[0] }}</h2>
   <ul>
     {% assign pages_list = tag[1] %}  
