--- a/categories.html
+++ b/categories.html
@@ -5,7 +5,9 @@ header: Posts By Category
 group: navigation
 ---
 {% include JB/setup %}
+
 <h3>Categories</h3>
+<p>&nbsp;</p>
 <ul class="tag_box inline">
   {% assign categories_list = site.categories %}
   {% include JB/categories_list %}
