--- a/categories.html
+++ b/categories.html
@@ -6,8 +6,8 @@ group: navigation
 ---
 {% include JB/setup %}
 
+<hr style="width:150px" />
 <h3>Categories</h3>
-<p>&nbsp;</p>
 <ul class="tag_box inline">
   {% assign categories_list = site.categories %}
   {% include JB/categories_list %}
@@ -16,7 +16,7 @@ group: navigation
 
 {% for category in site.categories %} 
 <p>&nbsp;</p>
-<hr style="width:150px">
+<hr style="width:150px" />
   <h2 id="{{ category[0] }}-ref">{{ category[0] | join: "/" }}</h2>
   <ul>
     {% assign pages_list = category[1] %}  
