--- a/tags.html
+++ b/tags.html
@@ -6,6 +6,8 @@ group: navigation
 ---
 {% include JB/setup %}
 
+<hr style="width:150px" />
+<h3>Tags</h3>
 <ul class="tag_box inline">
   {% assign tags_list = site.tags %}  
   {% include JB/tags_list %}
