--- a/maddalena.html
+++ b/maddalena.html
@@ -7,7 +7,7 @@
   <style type="text/css">
 
 body {
-  background-image: url(http://sevendown.org/img/sketchbook11.jpg);
+  background-image: url(assets/baskerinthelight.jpg);
   background-color: darkgray;
   background-repeat: no-repeat;
   background-position: center top;
