--- a/maddalena.html
+++ b/maddalena.html
@@ -61,15 +61,14 @@ to make a life. </p>
 </p>
 <p>
       <a href="mailto:dpmaddalena@gmail.com">email</a> //
-650 648 3623</p>
-<a href="http://childhoodforthewholefamily.com/">      </a> </td>
-      <td>
+650 648 3623</p></td>
+      <!--td>
       <div align="right"> <a href="http://bit.ly/lowtechwriter"><img src="img/ltw_thumb.jpg" alt="(low) tech writer: low tech perspectives in a high tech world" 
 border="0" height="88" width="56"></a>&nbsp; <a href="http://bit.ly/brightsadnessbook"><img alt="Bright Sadness by David Maddalena" 
 src="img/brightsadness_sm.jpg" border="0" height="88" width="56"></a>
       <p><a href="http://www.imby.net/20120118/homemade-poetry"><img src="img/brokenvessel_sm.jpg" alt="David Maddalena Poetry" border="0" height="88" 
 width="56"> </a><a href="http://www.imby.net/20140223/collected-collages"><img alt="David Maddalena Collage" src="img/beginningtothumb.jpg" border="0" 
-height="88" width="56"></a></p>
+height="88" width="56"></a></p-->
       <p>&nbsp;</p>
       <p>&nbsp;</p>
       <p>&nbsp;</p>
