--- a/maddalena.html
+++ b/maddalena.html
@@ -40,15 +40,16 @@ h3 {
     <tr>
       <td valign="top"><h3><strong>DAVID MADDALENA</strong></h3>
 <p>
-I am a writer, a poet, a pastor, a teacher,<br> 
-an artist, and an MFT-in-training. <br>
-My medium is <em>collage</em>, which might explain <br>
-how I can piece all these parts together<br>
+I am a writer, a therapist-in-training, <br /> 
+a teacher, poet, pastor, and artist <br />
+My medium is <em>collage</em>, which explains <br />
+how I can piece all these parts together <br />
 to make a life. </p>
-      <p>
+ 
+<p>
 <big>&#9782;</big> Community: <a href="http://refugeandprospect.org">Refuge and Prospect</a> <br />
 <big>&#9782;</big> IMBY.NET <a href="http://www.imby.net/">writings, poems, and art</a> <br />
-<big>&#9782;</big> <a href="http://www.imby.net/20170525/abrasion">Abrasion</a>, a science fiction Novella<br />
+<big>&#9782;</big> <a href="http://www.imby.net/20170525/abrasion">Abrasion</a>, a sci-fi Novella<br />
 <big>&#9782;</big> <a href="works/index.html">Works</a> for sale <br />
 <big>&#9782;</big> Our <a href="http://childhoodforthewholefamily.com/">essays on childhood</a> <br />
 <big>&#9782;</big> Father/daughter <a href="http://daveartzoe.wordpress.com/">rep-art-ee</a> <br />
