--- a/404.html
+++ b/404.html
@@ -12,11 +12,10 @@
 
 Sorry this page does not exist.</font></p>
 
+<p>&nbsp;</p>
 
-<p><font color="white">What's more, it is pitch black in here; you are likely to be eaten by a grue.</font>
-</p>
 
-<p><font color="white"><a href="https://www.dpmaddalena.com" font color="white">Light</a> (lantern) ...</font></p>
+<p><font color="white">What's more, it is pitch black in here; you are likely to be eaten by a grue. ... <a href="https://www.dpmaddalena.com" font color="white">Light</a> (lantern) ...</font></p>
 
 </body>
 </html>
