--- a/404.html
+++ b/404.html
@@ -8,14 +8,14 @@
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-<p><font size="8" color="white">
+<p><font family="courier" size="8" color="green">
 
 Sorry this page does not exist.</font></p>
 
 <p>&nbsp;</p>
 
 
-<p><font color="white">What's more, it is pitch black in here; you are likely to be eaten by a grue. ... <a href="https://www.dpmaddalena.com" font color="white">Light</a> (lantern) ...</font></p>
+<p><font family="courier" color="green">What's more, it is pitch black in here; you are likely to be eaten by a grue. ... <a href="https://www.dpmaddalena.com" font-family="courier" font-color="green">Light</a> (lantern) ...</font></p>
 
 </body>
 </html>
