--- a/404.html
+++ b/404.html
@@ -1,21 +1,43 @@
 <!DOCTYPE html>
 <html>
-
-<body bgcolor="black">
+<meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>404</title>
+   <style>
+    body {
+      color: green;
+      font-family: 'Courier', monospace;
+      background-color: black; /* Set the background color to black */
+    }
+    
+    /* Styling for links */
+    a {
+      color: inherit;
+      text-decoration: none;
+      border-bottom: 1px solid green;
+      font-family: inherit;
+    }
+    
+    /* Styling for visited links */
+    a:visited {
+      color: darkgreen;
+    }
+  </style>
+</head>
 
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-<p><font family="courier" size="8" color="green">
+<p>
 
-Sorry this page does not exist.</font></p>
+<font size="8"> Sorry this page does not exist.</font></p>
 
 <p>&nbsp;</p>
 
 
-<p><font family="courier" color="green">What's more, it is pitch black in here; you are likely to be eaten by a grue. ... <a href="https://www.dpmaddalena.com" font-family="courier" font-color="green">Light</a> (lantern) ...</font></p>
+<pWhat's more, it is pitch black in here; you are likely to be eaten by a grue. ... <a href="https://www.dpmaddalena.com">Light</a> (lantern) ...</p>
 
 </body>
 </html>
