--- a/404.html
+++ b/404.html
@@ -37,7 +37,7 @@
 <p>&nbsp;</p>
 
 
-<p><font size="6">What's more, it is pitch black in here; you are likely to be eaten by a grue. ... <a href="https://www.dpmaddalena.com">Light</a> (lantern) ...</font></p>
+<p><font size="6">What's more, it is pitch black in here; you are likely to be eaten by a grue. ... <a href="https://www.dpmaddalena.com">Light</a> (lantern) </font></p>
 
 </body>
 </html>
