--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
    <style>
     body {
       color: green;
-      font-family: 'Courier', monospace;
+      font-family: 'VT323', monospace;
       background-color: black; /* Set the background color to black */
     }
     
@@ -23,7 +23,14 @@
       color: darkgreen;
     }
   </style>
+  
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+
 </head>
+
+<body>
 
 <p>&nbsp;</p>
 <p>&nbsp;</p>
