--- a/404.html
+++ b/404.html
@@ -39,12 +39,12 @@
 <p>&nbsp;</p>
 <p>
 
-<font size="8"> Sorry this page does not exist.</font></p>
+Sorry this page does not exist.</p>
 
 <p>&nbsp;</p>
 
 
-<p><font size="6">What's more, it is pitch black in here; you are likely to be eaten by a grue. ... <a href="https://www.dpmaddalena.com">Light</a> (lantern) </font></p>
+<p>What's more, it is pitch black in here; you are likely to be eaten by a grue. ... <a href="https://www.dpmaddalena.com">Light</a> (lantern) </p>
 
 </body>
 </html>
