--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
   <title>404</title>
    <style>
     body {
-      color: green;
+      color: #00FF00;
       font-family: 'VT323', monospace;
       background-color: black; /* Set the background color to black */
     }
