--- a/404.html
+++ b/404.html
@@ -3,9 +3,15 @@
 <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>404</title>
-   <style>
+  
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+
+<style>
     body {
       color: #00FF00;
+      font-size: 32px;
       font-family: 'VT323', monospace;
       background-color: black; /* Set the background color to black */
     }
@@ -24,10 +30,6 @@
     }
   </style>
   
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-
 </head>
 
 <body>
@@ -44,7 +46,7 @@ Sorry this page does not exist.</p>
 <p>&nbsp;</p>
 
 
-<p>What's more, it is pitch black in here; you are likely to be eaten by a grue. ... <a href="https://www.dpmaddalena.com">Light</a> (lantern) </p>
+<p>What's more, it is pitch black in here. You are likely to be eaten by a grue. ... <a href="https://www.dpmaddalena.com">Light</a> (lantern) </p>
 
 </body>
 </html>
