--- a/404.html
+++ b/404.html
@@ -26,7 +26,7 @@
     
     /* Styling for visited links */
     a:visited {
-      color: darkgreen;
+      color: #00FF00;
     }
   </style>
   
@@ -34,8 +34,6 @@
 
 <body>
 
-<p>&nbsp;</p>
-<p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
