--- a/404.html
+++ b/404.html
@@ -44,7 +44,9 @@ Sorry this page does not exist.</p>
 <p>&nbsp;</p>
 
 
-<p>What's more, it is pitch black in here. You are likely to be eaten by a grue. ... <a href="https://www.dpmaddalena.com">Light</a> (lantern) </p>
+<p>What's more, it is pitch black in here. You are likely to be eaten by a grue.</p> 
+
+<p> > <a href="https://www.dpmaddalena.com">Light</a> (lantern) </p>
 
 </body>
 </html>
