--- a/404.html
+++ b/404.html
@@ -37,14 +37,12 @@
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-<p>
 
-Sorry this page does not exist.</p>
-
-<p>&nbsp;</p>
-
+<p>Sorry this page does not exist.</p>
 
 <p>What's more, it is pitch black in here. You are likely to be eaten by a grue.</p> 
+
+<p>&nbsp;</p>
 
 <p> > <a href="https://www.dpmaddalena.com">Light</a> (lantern) </p>
 
