--- a/404.html
+++ b/404.html
@@ -38,11 +38,8 @@
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 
-<p>Sorry this page does not exist.</p>
-
-<p>What's more, it is pitch black in here. You are likely to be eaten by a grue.</p> 
-
-<p>&nbsp;</p>
+<p>Sorry this page does not exist.<br />
+What's more, it is pitch black in here. You are likely to be eaten by a grue.</p> 
 
 <p> > <a href="https://www.dpmaddalena.com">Light</a> (lantern) </p>
 
